--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,13 @@
 requires = ["setuptools >= 71.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools]
+packages = ["attendance"]
+include-package-data = true
+
+[tool.setuptools.package-data]
+attendance = ["config.json"]
+
 [project]
 name = "attendance"
 version = "1.0.0"
