--- a/src/attendance/config.json
+++ b/src/attendance/config.json
@@ -1,5 +1,5 @@
 {
     "rank": "PTE",
     "batch": "03/24",
-    "folder": "https://drive.google.com/drive/u/0/folders/"
+    "folder": "https://drive.google.com/drive/folders/1tpzbKxi94M8DD-cUD1Q0I59US1ZdwTLK"
 }
