--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools >= 71.0.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
-packages = ["attendance"]
+packages = ["src/attendance"]
 include-package-data = true
 
 [tool.setuptools.package-data]
